--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 h1 {
-    color: red
+    color: darkblue
 }
+h1 {font-family: cursive
+}
+h1{ font-size: xx-large
+}
+h2 { font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+h2{ font-size: x-large
+}
+h2{ color: royalblue}
+body{ background-color: rgb(78, 78, 78)}
