--- a/main.css
+++ b/main.css
@@ -11,3 +11,62 @@ h2{ font-size: x-large
 }
 h2{ color: royalblue}
 body{ background-color: rgb(78, 78, 78)}
+
+.full-grid{ 
+    width: 300px;
+    height: 300px
+}
+.square-1{
+    background-color: crimson;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-2{
+    background-color: blue;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-3{
+    background-color: green;
+    width: 100px;
+    height:100px;
+    float: left
+}
+.square-4{
+    background-color: beige;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-5{
+    background-color: orange;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-6{
+    background-color: gold;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-7{
+    background-color: deeppink;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-8{
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    float: left
+}
+.square-9{
+    background-color: indigo;
+    width: 100px;
+    height: 100px;
+    float: left
+}
