--- a/main.css
+++ b/main.css
@@ -47,6 +47,9 @@ h3{
 .square-9{
     background-color: indigo
 }
+.square-10{
+    background-color: thistle
+}
 .cube{
     width: 100px;
     height: 100px;
