--- a/main.css
+++ b/main.css
@@ -47,11 +47,12 @@ h3{
 .square-9{
     background-color: indigo
 }
-.square-10{
-    background-color: thistle
-}
 .cube{
     width: 100px;
     height: 100px;
-    float: left
+    float: left;
+    font-size: x-large;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: hsl(hue, saturation, lightness);
+    border-block-end-color: black
 }
