--- a/main.css
+++ b/main.css
@@ -50,9 +50,10 @@ h3{
 .cube{
     width: 100px;
     height: 100px;
-    float: left;
     font-size: x-large;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: hsl(hue, saturation, lightness);
-    border-block-end-color: black
+    color: hsl(hue, saturation, lightness)
+}
+.row{
+    display: flex;
 }
