--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ h3{
     height: 100px;
     font-size: x-large;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: hsl(hue, saturation, lightness)
+    color: gray
 }
 .row{
     display: flex;
