--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body{ background-color: rgb(78, 78, 78)
 }
 h3{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: dodgerblue;
+    color: rgb(0,23,91);
     font-size: x-large;
 }
 
